Added placeholder images and text in history section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 .jumbotron {
     background: transparent;
 }
+
+.history img {
+    position: relative;
+    float: left;
+    width: 50%;
+}
+
+.history .img2 {
+    float: right;
+}
