--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 .bgImg {
-    background: url("../images/header.jpg") no-repeat;
+    background: url("../images/header.jpg") no-repeat fixed;
     height: 100vh;
     background-position: center center;
     background-size:cover; 
