Moved Heading in jumbotron

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@
     overflow: hidden;
 }
 
+.jumbotron .display-4{
+    position: absolute;
+    top: 30%;
+    left: 10%;
+}
+
 .history img {
     position: relative;
     float: left;
