Updated links in navbar and added scroll behaviour to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@
   --white5: #bbbac1;
 }
 
+html {
+     scroll-behavior: smooth;
+}
+
 .bgImg {
     background: url("../images/header.jpg") no-repeat fixed;
     height: 100vh;
