Removed images on mobile devises in history and created space between attractions and history

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,3 +117,17 @@ form.signup-form {
   background-color: #0C3E08;
   color: #ecf56c;
 }
+
+#attractions{
+    margin-top: 10%;
+}
+
+@media only screen and (min-width: 425px) {
+    .history img {
+        display: none;
+    }
+
+    .history .img2 {
+        display: none;
+    }
+}
