--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ form.signup-form {
     margin-top: 10%;
 }
 
-@media only screen and (min-width: 425px) {
+@media only screen and (max-width: 425px) {
     .history img {
         display: none;
     }
